# vim

./: .clang-format  .vimrc  CMakeLists.txt  c.snippets  coc-settings.json
clang-format/v14.0.0_c_cpp_java_objc/: .clang-format  a.clang-format  clang-format.txt
openocd/: jlink-swd-stm32f103.cfg
snippets/: c.snippets  cpp.snippets
vim/: .vimrc
vimspector/: .vimspector.json
vscode/: settings.json
zsh/: .p10k.zsh  .zshrc
